argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb/oncokb_core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: oncokb-core
    tags.datadoghq.com/env: eks-prod-oncokb
    tags.datadoghq.com/service: oncokb-core
  name: oncokb-core
  namespace: oncokb
spec:
  replicas: 1
  selector:
    matchLabels:
      run: oncokb-core
  strategy:
    rollingUpdate:
      # We want to do a rolling updates to make sure all old instances removed before last new pod is initialized.
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: oncokb-core
        tags.datadoghq.com/env: eks-prod-oncokb
        tags.datadoghq.com/service: oncokb-core
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.24.2
    spec:
      volumes:
        - name: log4j-properties
          configMap:
            name: oncokb-core-log4j-properties
      containers:
        - env:
          image: mskcc/oncokb:6.0.0
          volumeMounts:
            - mountPath: /config/
              name: log4j-properties
          command: ["java"]
          args: [
              # from https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers/
              "-Xms500m",
              "-XX:+UseSerialGC",
              # aggressive garbage collection
              "-XX:MinHeapFreeRatio=20",
              "-XX:MaxHeapFreeRatio=40",
              "-XX:GCTimeRatio=4",
              "-XX:AdaptiveSizePolicyWeight=90",
              "-XX:+UnlockExperimentalVMOptions",
              "-XX:+UseCGroupMemoryLimitForHeap",
              # use maxRAMFraction > 1 https://github.com/akka/akka/issues/23499
              "-XX:MaxRAMFraction=2",
              "-XX:+PrintFlagsFinal",
              "-XshowSettings:vm",
              # need to set MaxRAM, somehow the MaxRAMFraction is not picked up
              # from the limits
              "-XX:MaxRAM=2g",
              "-Dapp.name=$(APP_NAME)",
              "-Djdbc.driverClassName=com.mysql.jdbc.Driver",
              "-Djdbc.url=$(DB_URL)/oncokb_core_v7_0?useUnicode=yes&characterEncoding=UTF-8&useSSL=false",
              "-Djdbc.username=$(DB_USERNAME)",
              "-Djdbc.password=$(DB_PASSWORD)",
              "-Dgenomenexus.api=https://www.genomenexus.org/",
              "-Daws.s3.accessKey=$(ACCESS_KEY_ID)",
              "-Daws.s3.secretKey=$(SECRET_ACCESS_KEY)",
              "-Daws.s3.region=$(AWS_REGION)",
              "-Doncokb_data.access_token=$(ONCOKBDEV_PRIVATE_ACCESS_TOKEN)",
              "-Doncokb_transcript.token=$(ONCOKB_TRANSCRIPT_TOKEN)",
              "-Dredis.enable=true",
              "-Dredis.type=$(REDIS_TYPE)",
              "-Dredis.address=$(REDIS_ADDRESS)",
              "-Dredis.password=$(REDIS_PASSWROD)",
              "-Dredis.expiration=$(REDIS_EXPIRATION)",
              "-Dswagger_url=https://www.oncokb.org",
              "-Dsentry.stacktrace.app.packages=org.mskcc.cbio.oncokb,org.genome_nexus",
              "-Dsentry.sample.rate=0.5",
              "-Dshow_sitemaps=false",
              "-Dlog4j.configuration=file:/config/log4j.properties",
              "-jar",
              "/webapp-runner.jar",
              "--enable-compression",
              "--port",
              "8888",
              "/app.war",
            ]
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 8888
            initialDelaySeconds: 15
            timeoutSeconds: 60
            periodSeconds: 30
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 8888
            initialDelaySeconds: 600
            timeoutSeconds: 60
            periodSeconds: 10
            failureThreshold: 72
          name: oncokb-core
          ports:
            - containerPort: 8888
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 4000m
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "oncokb"
          effect: "NoSchedule"
      nodeSelector:
        workload: oncokb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: oncokb-core
  name: oncokb-core
  namespace: oncokb
spec:
  ports:
    - port: 8888
  selector:
    run: oncokb-core
  type: ClusterIP
