argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb/oncokb_core_germline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    run: oncokb-core-germline
  name: oncokb-core-germline
  namespace: oncokb
spec:
  replicas: 1
  selector:
    matchLabels:
      run: oncokb-core-germline
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: oncokb-core-germline
    spec:
      containers:
        - env:
          image: oncokb/oncokb:4.0.0-germline.9
          command: ["java"]
          args: [
            "-Dapp.name=$(APP_NAME)",
            "-Djdbc.driverClassName=com.mysql.jdbc.Driver",
            "-Djdbc.url=$(DB_URL)/oncokb_core_germline?useUnicode=yes&characterEncoding=UTF-8&useSSL=false",
            "-Djdbc.username=$(DB_USERNAME)",
            "-Djdbc.password=$(DB_PASSWORD)",
            "-Dgenomenexus.api=https://www.genomenexus.org/",
            "-Doncokb_transcript.url=https://transcript.oncokb.org",
            "-Doncokb_transcript.token=$(ONCOKB_TRANSCRIPT_TOKEN)",
            "-Dpublic_oncokb.token=$(PUBLIC_ONCOKB_TOKEN)",
            "-Dredis.enable=false",
            "-Dredis.type=$(REDIS_TYPE)",
            "-Dredis.address=$(REDIS_ADDRESS)",
            "-Dredis.password=$(REDIS_PASSWORD)",
            "-Dredis.expiration=$(REDIS_EXPIRATION)",
            "-Dswagger_url=https://beta.oncokb.org",
            "-Dshow_sitemaps=false",
            "-Dsentry.stacktrace.app.packages=org.mskcc.cbio.oncokb",
            "-Dsentry.sample.rate=1",
            "-jar",
            "/webapp-runner.jar",
            "--enable-compression",
            "--port",
            "8888",
            "/app.war"
          ]
          imagePullPolicy: Always
          # use actionable variants endpoint to cache everything
          readinessProbe:
            httpGet:
              path: /api/v1/utils/allActionableVariants
              port: 8888
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /api/v1/utils/allActionableVariants
              port: 8888
            # wait for the pod is ready
            initialDelaySeconds: 300
            timeoutSeconds: 5
            periodSeconds: 20
            failureThreshold: 60
          name: oncokb-core-germline
          ports:
            - containerPort: 8888
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "oncokb"
          effect: "NoSchedule"
      nodeSelector:
        workload: oncokb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: oncokb-core-germline
  name: oncokb-core-germline
  namespace: oncokb
spec:
  ports:
    - port: 8888
  selector:
    run: oncokb-core-germline
  type: ClusterIP
