argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb/oncokb_core_germline_qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: oncokb-core-germline-qa
    tags.datadoghq.com/env: eks-prod-oncokb
    tags.datadoghq.com/service: oncokb-core-germline-qa
  name: oncokb-core-germline-qa
  namespace: oncokb
spec:
  replicas: 1
  selector:
    matchLabels:
      run: oncokb-core-germline-qa
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: oncokb-core-germline-qa
        tags.datadoghq.com/env: eks-prod-oncokb
        tags.datadoghq.com/service: oncokb-core-germline-qa
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.24.2
    spec:
      volumes:
        - name: log4j-properties
          configMap:
            name: oncokb-core-log4j-properties
      containers:
        - env:
          image: mskcc/oncokb:4.5.0-germline-beta.0
          volumeMounts:
            - mountPath: /config/
              name: log4j-properties
          command: ["java"]
          args: [
              # from https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers/
              "-Xms500m",
              "-XX:+UseSerialGC",
              # aggressive garbage collection
              "-XX:MinHeapFreeRatio=20",
              "-XX:MaxHeapFreeRatio=40",
              "-XX:GCTimeRatio=4",
              "-XX:AdaptiveSizePolicyWeight=90",
              "-XX:+UnlockExperimentalVMOptions",
              "-XX:+UseCGroupMemoryLimitForHeap",
              # use maxRAMFraction > 1 https://github.com/akka/akka/issues/23499
              "-XX:MaxRAMFraction=2",
              "-XX:+PrintFlagsFinal",
              "-XshowSettings:vm",
              # need to set MaxRAM, somehow the MaxRAMFraction is not picked up
              # from the limits
              "-XX:MaxRAM=2g",
              "-Dapp.name=$(APP_NAME)",
              "-Djdbc.driverClassName=com.mysql.jdbc.Driver",
              "-Djdbc.url=$(DB_URL)/oncokb_core_germline_qa?useUnicode=yes&characterEncoding=UTF-8&useSSL=false",
              "-Djdbc.username=$(DB_USERNAME)",
              "-Djdbc.password=$(DB_PASSWORD)",
              "-Dgenomenexus.api=https://www.genomenexus.org/",
              "-Doncokb_transcript.url=https://transcript.oncokb.org",
              "-Doncokb_transcript.token=$(ONCOKB_TRANSCRIPT_TOKEN)",
              "-Dpublic_oncokb.token=$(PUBLIC_ONCOKB_TOKEN)",
              "-Dredis.enable=false",
              "-Dredis.type=$(REDIS_TYPE)",
              "-Dredis.address=$(REDIS_ADDRESS)",
              "-Dredis.password=$(REDIS_PASSWORD)",
              "-Dredis.expiration=$(REDIS_EXPIRATION)",
              "-Dswagger_url=https://germline.oncokb.org",
              "-Dshow_sitemaps=false",
              "-Dsentry.stacktrace.app.packages=org.mskcc.cbio.oncokb",
              "-Dsentry.sample.rate=1",
              "-Dlog4j.configuration=file:/config/log4j.properties",
              "-jar",
              "/webapp-runner.jar",
              "--enable-compression",
              "--port",
              "8888",
              "/app.war",
            ]
          imagePullPolicy: Always
          # use actionable variants endpoint to cache everything
          readinessProbe:
            httpGet:
              path: /api/v1/utils/allActionableVariants
              port: 8888
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /api/v1/utils/allActionableVariants
              port: 8888
            # wait for the pod is ready
            initialDelaySeconds: 300
            timeoutSeconds: 5
            periodSeconds: 20
            failureThreshold: 60
          name: oncokb-core-germline-qa
          ports:
            - containerPort: 8888
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 4000m
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "oncokb"
          effect: "NoSchedule"
      nodeSelector:
        workload: oncokb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: oncokb-core-germline-qa
  name: oncokb-core-germline-qa
  namespace: oncokb
spec:
  ports:
    - port: 8888
  selector:
    run: oncokb-core-germline-qa
  type: ClusterIP
