argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb/oncokb_core_public.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: oncokb-core-public
    tags.datadoghq.com/env: eks-prod-oncokb
    tags.datadoghq.com/service: oncokb-core-public
  name: oncokb-core-public
  namespace: oncokb
spec:
  replicas: 2
  selector:
    matchLabels:
      run: oncokb-core-public
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: oncokb-core-public
        tags.datadoghq.com/env: eks-prod-oncokb
        tags.datadoghq.com/service: oncokb-core-public
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.24.2
    spec:
      volumes:
        - name: log4j-properties
          configMap:
            name: oncokb-core-log4j-properties
      containers:
        - env:
          image: mskcc/oncokb:6.0.0-no-frontend
          volumeMounts:
            - mountPath: /config/
              name: log4j-properties
          command: ["java"]
          args: [
              # from https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers/
              "-Xms250m",
              "-XX:+UseSerialGC",
              # aggressive garbage collection
              "-XX:MinHeapFreeRatio=20",
              "-XX:MaxHeapFreeRatio=40",
              "-XX:GCTimeRatio=4",
              "-XX:AdaptiveSizePolicyWeight=90",
              "-XX:+UnlockExperimentalVMOptions",
              "-XX:+UseCGroupMemoryLimitForHeap",
              # use maxRAMFraction > 1 https://github.com/akka/akka/issues/23499
              "-XX:MaxRAMFraction=2",
              "-XX:+PrintFlagsFinal",
              "-XshowSettings:vm",
              # need to set MaxRAM, somehow the MaxRAMFraction is not picked up
              # from the limits
              "-XX:MaxRAM=1024m",
              "-Dapp.name=oncokb-core-public",
              "-Djdbc.driverClassName=com.mysql.jdbc.Driver",
              "-Djdbc.url=$(DB_URL)/oncokb_core_public?useUnicode=yes&characterEncoding=UTF-8&useSSL=false",
              "-Djdbc.username=$(DB_USERNAME)",
              "-Djdbc.password=$(DB_PASSWORD)",
              "-Dgenomenexus.api=https://www.genomenexus.org/",
              "-Dshow_sitemaps=false",
              "-Dswagger_url=https://public.api.oncokb.org",
              "-Dsentry.stacktrace.app.packages=org.mskcc.cbio.oncokb,org.genome_nexus",
              "-Dsentry.sample.rate=0.1",
              "-Dis_public_instance=true",
              "-Dlog4j.configuration=file:/config/log4j.properties",
              "-jar",
              "/webapp-runner.jar",
              "--enable-compression",
              "--port",
              "8888",
              "/app.war",
            ]
          imagePullPolicy: Always
          # use actionable variants endpoint to cache everything
          readinessProbe:
            httpGet:
              path: /api/v1/utils/allActionableVariants
              port: 8888
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /api/v1/utils/allActionableVariants
              port: 8888
            # wait for the pod is ready
            initialDelaySeconds: 300
            timeoutSeconds: 5
            periodSeconds: 20
            failureThreshold: 60
          name: oncokb-core-public
          ports:
            - containerPort: 8888
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "oncokb"
          effect: "NoSchedule"
      nodeSelector:
        workload: oncokb
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: oncokb-core-public
  name: oncokb-core-public
  namespace: oncokb
spec:
  ports:
    - name: http
      port: 8888
  selector:
    run: oncokb-core-public
  type: ClusterIP
