argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb/oncokb_data_release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncokb-data-release
  namespace: oncokb
  labels:
    run: oncokb-data-release
    tags.datadoghq.com/env: eks-oncokb
    tags.datadoghq.com/service: oncokb-data-release
spec:
  replicas: 1
  selector:
    matchLabels:
      run: oncokb-data-release
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        run: oncokb-data-release
        tags.datadoghq.com/env: eks-oncokb
        tags.datadoghq.com/service: oncokb-data-release
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.24.2
    spec:
      imagePullSecrets:
        - name: oncokb-dockerhub-creds
      containers:
        - name: oncokb-data-release
          image: mskcc/oncokb-data-release:v1.1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8085
              protocol: TCP
          volumeMounts:
            - name: firebase-credentials
              mountPath: /oncokb-firebase-credentials.json
              subPath: oncokb-firebase-credentials.json
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 15
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 20
            failureThreshold: 6
          securityContext: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "oncokb"
          effect: "NoSchedule"
      nodeSelector:
        workload: oncokb
      volumes:
        - name: firebase-credentials
          secret:
            secretName: oncokb-firebase-prod-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: oncokb-data-release
  namespace: oncokb
  labels:
    run: oncokb-data-release
spec:
  type: ClusterIP
  selector:
    run: oncokb-data-release
  ports:
    - name: http
      port: 8085
      targetPort: http
      protocol: TCP
