argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb/oncokb_public_germline_qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncokb-public-germline-qa
  namespace: oncokb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oncokb-public-germline-qa
      version: "v1"
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oncokb-public-germline-qa
        version: "v1"
    spec:
      containers:
        - name: oncokb-public-germline-qa
          image: mskcc/oncokb-public:4.2.0-germline-beta.0
          readinessProbe:
            httpGet:
              path: /
              port: 9095
            initialDelaySeconds: 30
            timeoutSeconds: 10
            periodSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 9095
            initialDelaySeconds: 90
            timeoutSeconds: 15
            periodSeconds: 15
            failureThreshold: 10
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: 2000m
          ports:
            - name: http
              containerPort: 9095
          volumeMounts:
            # The subPath is needed so that mounting the secret as a single file doesn't override
            # the contents of the existing directory.
            - mountPath: /app/resources/config/recaptcha/oncokb-recaptcha-credentials.json
              subPath: oncokb-recaptcha-credentials.json
              name: recaptcha-credentials
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "oncokb"
          effect: "NoSchedule"
      nodeSelector:
        workload: oncokb
      volumes:
        - name: recaptcha-credentials
          secret:
            secretName: oncokb-recaptcha-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: oncokb-public-germline-qa
  namespace: oncokb
  labels:
    app: oncokb-public-germline-qa
spec:
  selector:
    app: oncokb-public-germline-qa
  type: ClusterIP
  ports:
    - name: http
      port: 9095
