argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb/oncokb_public_staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tags.datadoghq.com/env: eks-prod-oncokb
    tags.datadoghq.com/service: oncokb-public-staging
  name: oncokb-public-staging
  namespace: oncokb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oncokb-public-staging
      version: "v1"
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oncokb-public-staging
        version: "v1"
        tags.datadoghq.com/env: eks-prod-oncokb
        tags.datadoghq.com/service: oncokb-public-staging
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.24.2
    spec:
      containers:
        - name: oncokb-public-staging
          image: mskcc/oncokb-public:5.7.0-beta.3
          readinessProbe:
            httpGet:
              path: /
              port: 9095
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 9095
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: 750m
          ports:
            - name: http
              containerPort: 9095
          volumeMounts:
            # The subPath is needed so that mounting the secret as a single file doesn't override
            # the contents of the existing directory.
            - mountPath: /app/resources/config/recaptcha/oncokb-recaptcha-credentials.json
              subPath: oncokb-recaptcha-credentials.json
              name: recaptcha-credentials
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "oncokb"
          effect: "NoSchedule"
      nodeSelector:
        workload: oncokb
      volumes:
        - name: recaptcha-credentials
          secret:
            secretName: oncokb-recaptcha-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: oncokb-public-staging
  namespace: oncokb
  labels:
    app: oncokb-public-staging
spec:
  selector:
    app: oncokb-public-staging
  type: ClusterIP
  ports:
    - name: http
      port: 9095
